--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@ngrx/store": "^12.2.0",
     "bootstrap": "^3.4.1",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "^6.2.0",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
     "tslib": "^2.0.0",
