--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@ngrx/effects": "^12.2.0",
     "@ngrx/store": "^12.2.0",
     "bootstrap": "^3.4.1",
     "jquery": "^3.6.0",
