--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "@ngrx/effects": "^12.2.0",
+    "@ngrx/router-store": "^12.2.0",
     "@ngrx/store": "^12.2.0",
     "bootstrap": "^3.4.1",
     "jquery": "^3.6.0",
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "~0.1102.12",
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
+    "@ngrx/store-devtools": "^12.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
