--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@ngrx/effects": "^12.2.0",
     "@ngrx/router-store": "^12.2.0",
     "@ngrx/store": "^12.2.0",
-    "bootstrap": "^3.4.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^6.2.0",
     "popper.js": "^1.14.3",
