fixed netlify routing issue

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,12 @@
             "assets": [
               "src/app/header/logo.png",
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              }
             ],
             "styles": [
             "node_modules/bootstrap/dist/css/bootstrap.min.css",
