--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,7 @@
               "src/app/header/logo.png",
               "src/favicon.ico",
               "src/assets",
-              {
-                "glob": "_redirects",
-                "input": "src",
-                "output": "/"
-              }
+              "src/_redirects"             
             ],
             "styles": [
             "node_modules/bootstrap/dist/css/bootstrap.min.css",
