--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run recipe:serve-ssr",
+    "serve:ssr": "node dist/recipe/server/main.js",
+    "build:ssr": "ng build --prod && ng run recipe:server:production",
+    "prerender": "ng run recipe:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,12 +22,15 @@
     "@angular/forms": "~11.2.13",
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
+    "@angular/platform-server": "~11.2.13",
     "@angular/router": "~11.2.13",
     "@ngrx/effects": "^12.2.0",
     "@ngrx/router-store": "^12.2.0",
     "@ngrx/store": "^12.2.0",
+    "@nguniversal/express-engine": "^11.2.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.2",
+    "express": "^4.15.2",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^6.2.0",
     "popper.js": "^1.14.3",
@@ -37,6 +44,8 @@
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
     "@ngrx/store-devtools": "^12.2.0",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
