--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.0.2",
     "express": "^4.15.2",
     "jquery": "^3.6.0",
+    "netlify-cli": "^6.5.1",
     "ngx-bootstrap": "^6.2.0",
     "popper.js": "^1.14.3",
     "rxjs": "~6.6.0",
