--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = "npm run prerender"
   functions = "./functions"
-  publish = "dist/angular-universal-pre-render/browser"
+  publish = "dist/recipe/browser"
